<project
   xmlns="http://maven.apache.org/POM/4.0.0"
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>ru.arifolth.game</groupId>
  <artifactId>Game</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>Game</name>

  <developers>
    <developer>
      <id>arifolth</id>
      <name>Alexander Nilov</name>
      <email>arifolth@gmail.com</email>
    </developer>
  </developers>

  <modules>
    <module>Assets</module>
    <module>Libraries</module>
    <module>Modules</module>
    <module>GameClient</module>
  </modules>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
          <encoding>UTF-8</encoding>
        </configuration>
        <version>3.1</version>
      </plugin>

      <!--
      <plugin>
        <artifactId>maven-source-plugin</artifactId>
        <executions>
          <execution>
            <id>attach-sources</id>
            <phase>verify</phase>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      -->
    </plugins>
  </build>

  <properties>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>

    <encoding>UTF-8</encoding>

    <jmonkey.version>3.1.0-stable</jmonkey.version>
    <!--<jmonkey.version>3.4.0-SNAPSHOT</jmonkey.version>-->
    <jme3.groupId>org.jmonkeyengine</jme3.groupId>
  </properties>

</project>
